Commit some changes

--- a/src/App.css
+++ b/src/App.css
@@ -129,6 +129,9 @@ form {
     border-radius: 4px;
     cursor: pointer;
     padding: 5px 10px;
+    &:hover{
+      background-color: #f21c0d;
+    }
   }
 
   &:hover{
